chore(jobs): remove pause functionality
